basic layout and trying to get add

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -9,10 +9,32 @@ html, body {
   text-align: center;
 }
 
-.plantEvents {
-  ol {
-    list-style: disc;
-  }
+.topBanner {
+  margin: 1rem;
+  height: 3rem;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
 
-@import '../../node_modules/react-datetime/css/react-datetime.css';
+.mainContent {
+  margin: 1rem;
+  height: 20rem;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
+
+.leftBar {
+  margin: 1rem;
+  height: 20rem;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
+
+.rightBar {
+  margin: 1rem;
+  height: 20rem;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
+
+.bottomBanner {
+  margin: 1rem;
+  height: 3rem;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
