--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -10,31 +10,37 @@ html, body {
 }
 
 .topBanner {
-  margin: 1rem;
+  margin: 2px;
   height: 3rem;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
 
 .mainContent {
-  margin: 1rem;
+  margin: 2px;
   height: 20rem;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
 
 .leftBar {
-  margin: 1rem;
-  height: 20rem;
+  margin: 2px;
+  height: 160px;
+  width: 100px;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
 
 .rightBar {
-  margin: 1rem;
-  height: 20rem;
+  margin: 2px;
+  height: 160px;
+  width: 100px;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
 
 .bottomBanner {
-  margin: 1rem;
+  margin: 2px;
   height: 3rem;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+}
+
+.advert {
+  overflow: hidden;
 }
