now using GPT as should have from get go...

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -17,6 +17,7 @@ html, body {
 
 .mainContent {
   margin: 2px;
+  padding: 0.5rem;
   height: 600px;
   box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
 }
